argoinstall/grafanaIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: grafana-ingress
  labels:
    name: grafana-ingress
spec:
  rules:
  - host: cluster.local
    http:
      paths:
      - pathType: Prefix
        path: "/grafana"
        backend:
          service:
            name: prometheus-grafana
            port: 
              number: 80
